MainMethodTestCases/src/com/example/valid/Main13.java
package com.example.valid;

public class Main13 {

	/**
	 * Valid.
	 * 
	 * It's perfectly acceptable to have a strictfp main method.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public strictfp static void main(String[] args) {
		System.out.println("Main13!");
	}

}
